[tool.poetry]
name = "budgetbuddy"
version = "0.1.0"
description = "a personal finance app."
authors = ["Jack Kolb <JacksonKolb94@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
Django = "^5.0.3"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
